crates/noaa-weather-cli/tests/summary/snapshots/noaa_weather_cli__summary_tests__gridpoints__forecast_summary_snapshot_si.snap
---
source: crates/noaa-weather-cli/src/../tests/summary/gridpoints.rs
assertion_line: 67
expression: "forecast().summarize(&options(UnitSystem::Si))"
---
title: Forecast
subtitle: ~
emphasis: None
sections:
  - Facts:
      heading: ~
      facts:
        - label: Updated
          key: updateTime
          also: []
          value:
            Timestamp: "2026-09-02T06:26:13+00:00"
          emphasis: None
        - label: Covers
          key: validTimes
          also: []
          value:
            Interval:
              start: "2026-09-02T00:00:00+00:00"
              end: "2026-09-10T01:00:00+00:00"
          emphasis: None
  - Table:
      heading: ~
      columns:
        - title: Period
          key: periods
          also: []
          align: Left
        - title: Time
          key: ~
          also: []
          align: Left
        - title: Temp
          key: ~
          also: []
          align: Right
        - title: Wind
          key: ~
          also: []
          align: Left
        - title: Forecast
          key: ~
          also: []
          align: Left
      rows:
        - - value:
              Text: Overnight
            emphasis: None
          - value:
              Interval:
                start: "2026-09-02T02:00:00-05:00"
                end: "2026-09-02T06:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 23.88888888888889
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 16 km/h S
            emphasis: None
          - value:
              Text: Partly Cloudy
            emphasis: None
        - - value:
              Text: Wednesday
            emphasis: None
          - value:
              Interval:
                start: "2026-09-02T06:00:00-05:00"
                end: "2026-09-02T18:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 37.22222222222222
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 16 to 24 km/h S gust 40 km/h
            emphasis: None
          - value:
              Text: Mostly Sunny
            emphasis: None
        - - value:
              Text: Wednesday Night
            emphasis: None
          - value:
              Interval:
                start: "2026-09-02T18:00:00-05:00"
                end: "2026-09-03T06:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 24.444444444444443
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 16 to 24 km/h S gust 32 km/h
            emphasis: None
          - value:
              Text: Partly Cloudy
            emphasis: None
        - - value:
              Text: Thursday
            emphasis: None
          - value:
              Interval:
                start: "2026-09-03T06:00:00-05:00"
                end: "2026-09-03T18:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 36.666666666666664
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 24 to 32 km/h S gust 48 km/h
            emphasis: None
          - value:
              Text: Mostly Sunny
            emphasis: None
        - - value:
              Text: Thursday Night
            emphasis: None
          - value:
              Interval:
                start: "2026-09-03T18:00:00-05:00"
                end: "2026-09-04T06:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 24.444444444444443
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 16 to 24 km/h S gust 40 km/h
            emphasis: None
          - value:
              Text: Mostly Clear
            emphasis: None
        - - value:
              Text: Friday
            emphasis: None
          - value:
              Interval:
                start: "2026-09-04T06:00:00-05:00"
                end: "2026-09-04T18:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 36.111111111111114
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 16 km/h S gust 32 km/h
            emphasis: None
          - value:
              Text: Mostly Sunny
            emphasis: None
        - - value:
              Text: Friday Night
            emphasis: None
          - value:
              Interval:
                start: "2026-09-04T18:00:00-05:00"
                end: "2026-09-05T06:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 24.444444444444443
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 8 to 16 km/h S
            emphasis: None
          - value:
              Text: Partly Cloudy
            emphasis: None
        - - value:
              Text: Saturday
            emphasis: None
          - value:
              Interval:
                start: "2026-09-05T06:00:00-05:00"
                end: "2026-09-05T18:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 35.55555555555556
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 8 to 16 km/h S
            emphasis: None
          - value:
              Text: Mostly Sunny
            emphasis: None
        - - value:
              Text: Saturday Night
            emphasis: None
          - value:
              Interval:
                start: "2026-09-05T18:00:00-05:00"
                end: "2026-09-06T06:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 22.77777777777778
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 8 km/h S
            emphasis: None
          - value:
              Text: Partly Cloudy
            emphasis: None
        - - value:
              Text: Sunday
            emphasis: None
          - value:
              Interval:
                start: "2026-09-06T06:00:00-05:00"
                end: "2026-09-06T18:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 34.44444444444444
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 8 km/h S
            emphasis: None
          - value:
              Text: Slight Chance Rain Showers
            emphasis: None
        - - value:
              Text: Sunday Night
            emphasis: None
          - value:
              Interval:
                start: "2026-09-06T18:00:00-05:00"
                end: "2026-09-07T06:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 21.666666666666668
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 8 km/h SE
            emphasis: None
          - value:
              Text: Partly Cloudy then Slight Chance Showers And Thunderstorms
            emphasis: None
        - - value:
              Text: Labor Day
            emphasis: None
          - value:
              Interval:
                start: "2026-09-07T06:00:00-05:00"
                end: "2026-09-07T18:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 33.333333333333336
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 8 to 16 km/h SE
            emphasis: None
          - value:
              Text: Slight Chance Showers And Thunderstorms then Mostly Sunny
            emphasis: None
        - - value:
              Text: Monday Night
            emphasis: None
          - value:
              Interval:
                start: "2026-09-07T18:00:00-05:00"
                end: "2026-09-08T06:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 22.22222222222222
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 16 km/h SE gust 32 km/h
            emphasis: None
          - value:
              Text: Partly Cloudy then Slight Chance Showers And Thunderstorms
            emphasis: None
        - - value:
              Text: Tuesday
            emphasis: None
          - value:
              Interval:
                start: "2026-09-08T06:00:00-05:00"
                end: "2026-09-08T18:00:00-05:00"
            emphasis: None
          - value:
              Quantity:
                value: 32.22222222222222
                unit: °C
                precision: 0
            emphasis: None
          - value:
              Text: 16 to 24 km/h S gust 40 km/h
            emphasis: None
          - value:
              Text: Slight Chance Showers And Thunderstorms then Mostly Sunny
            emphasis: None
notes: []
